Closed Bug 1681689 Opened 5 years ago Closed 5 years ago

Neqo has not supported multiple GOAWAY frames at some point but now it does

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

There is a debug assertion that is wrong.

Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0ad93db4505c HTTP3 may receive multiple GOAWAY frames. r=necko-reviewers,kershaw
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: