Bug 1681689 - HTTP3 may receive multiple GOAWAY frames. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D99328